Update layout + styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,60 @@
     <link rel="stylesheet" href="css\styles.css">
 </head>
 <body>
-    
+        <header>
+            <h1 class="main-title">Kalkulator BMI</h1>
+        </header>
+        <main>
+            <aside>
+                <article>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                </article>
+
+                <form>
+                <div>
+                    <h2>Jenis Kelamin</h2>
+                    <input type="radio" id="Pria" name="jenis-kelamin" value="Pria">
+                    <label for="Pria">Pria</label>
+                    <input type="radio" id="Wanita" name="jenis-kelamin" value="Wanita">
+                    <label for="Wanita">Wanita</label>
+                </div>
+
+                <div class="input-data">
+                    <h3>Berat Badan (kg)</h3>
+                    <input type="number">
+                    <h3>Usia (tahun)</h3>
+                    <input type="number">
+                    <h3>Tinggi Badan (cm)</h3>
+                    <input type="number">
+                </div>
+
+<!-- Two diffrent class for two diffrent colors-->
+                <div class="form-bttn-container">
+                    <Button class="buttons">Submit</Button>
+                    <Button class="buttonr">Reset</Button>
+                </div>
+                </form>
+
+                <article>
+                <header>
+                    <h2>Form Information</h2>
+                </header>
+                <p>
+
+
+                </p>
+                </article>
+            </aside>
+            
+            <aside>            
+                <section>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                </section>
+            </aside>
+        </main>
+
+        <footer>
+            <p>Made By Onve</p>
+        </footer>
 </body>
 </html>
